# libimobiledevice

./: CMakeLists.txt  replace_unistd.ps1
.github/workflows/: build-windows.yml  build.yml  cmake-multi-platform.yml  update-msys2.yml
